--- a/css/main.css
+++ b/css/main.css
@@ -78,7 +78,6 @@ textarea {
   padding: 0.2em 0; }
 
 /* Fonts & Colors */
-/* Mixins */
 /* Mobile Styles */
 /* Universal Styles */
 .content-wrapper {
@@ -164,46 +163,35 @@ header nav {
       margin-bottom: 5px; }
 
 /* Our Offices */
-#offices {
+#offices .office-locations {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  text-align: center; }
-  #offices article {
-    margin: 30px 25px; }
+  text-align: center;
+  width: 100%; }
+  #offices .office-locations article {
+    background: red;
+    width: 100%;
+    height: 220px;
+    margin: 20px 0px; }
 
 /* Our Investors */
-#investors .y-combinator {
-  background-size: 90%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-image: url("../img/yc-logo.png"); }
-#investors .mhv {
-  background-size: 90%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-image: url("../img/mhv-logo.png"); }
-#investors .strive {
-  background-size: 90%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-image: url("../img/strive-logo.png"); }
-#investors .wavemaker {
-  background-size: 90%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-image: url("../img/wavemaker-logo.png"); }
 #investors .investors-content {
-  align-items: center;
   display: flex;
   flex-direction: column;
-  padding-top: 40px; }
-#investors article {
-  margin-bottom: 45px;
-  width: 205px;
-  height: 145px;
-  padding: 0px 30px; }
+  justify-content: space-between;
+  align-items: center; }
+  #investors .investors-content article {
+    background: red;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 45px;
+    width: 100%;
+    height: 145px; }
+    #investors .investors-content article img {
+      margin: 0 auto; }
 
 /* Demo */
 #demo {
@@ -281,7 +269,7 @@ footer .footer-bg-element {
       align-items: flex-start;
       width: 100%; }
       #our-culture .culture-content article {
-        width: 30%; }
+        width: 28%; }
     #our-culture .culture-button {
       margin-top: 35px;
       text-align: center;
@@ -301,26 +289,23 @@ footer .footer-bg-element {
   /* Offices */
   #offices {
     margin: 100px 0px; }
-    #offices .content-wrapper {
-      width: 80%; }
     #offices h1 {
       padding-bottom: 60px; }
     #offices .office-locations {
       display: flex;
       flex-direction: row;
-      justify-content: space-between;
-      text-align: center; }
+      justify-content: space-around;
+      width: 100%; }
       #offices .office-locations article {
-        width: 100%; }
+        width: 42%; }
 
   /* Investors */
-  #investors {
+  #investors .investors-content {
+    flex-flow: row wrap;
+    justify-content: space-around;
     width: 100%; }
-    #investors .investors-content {
-      flex-flow: row wrap;
-      justify-content: space-around;
-      width: 100%;
-      margin: 0 auto; }
+    #investors .investors-content article {
+      width: 42%; }
 
   /* Demo */
   #demo {
@@ -396,13 +381,19 @@ footer .footer-bg-element {
       margin: 0 auto;
       width: 60%; }
 
-  /* Locations */
+  /* Offices */
+  #offices .office-locations {
+    justify-content: space-evenly; }
+    #offices .office-locations article {
+      width: 37%; }
+
   /* Investors */
-  #investors {
-    width: 100%; }
-    #investors .investors-content {
-      width: 60%;
-      margin: 0 auto; }
+  #investors .investors-content {
+    justify-content: space-evenly;
+    padding-top: 100px; }
+    #investors .investors-content article {
+      margin-bottom: 70px;
+      width: 37%; }
 
   /* Footer */
   footer .footer-content article {
