--- a/css/main.css
+++ b/css/main.css
@@ -77,19 +77,32 @@ textarea {
   color: #000;
   padding: 0.2em 0; }
 
-/* Fonts & Colors */
+/* Fonts */
+/* Colors */
+/* Style Variables */
 /* Mobile Styles */
 /* Universal Styles */
+body {
+  font-family: "Source Sans Pro", sans-serif;
+  font-size: 16px;
+  line-height: 1.5rem; }
+
 .content-wrapper {
   margin: 0px 25px; }
 
+a {
+  text-decoration: none; }
+
 h1 {
+  line-height: 2rem;
   text-align: center; }
 
 .logo {
   display: inline-block;
-  margin-left: 10px;
+  padding-bottom: 15px;
   text-transform: lowercase; }
+  .logo h2 {
+    margin-left: 10px; }
 
 /* Header */
 header nav {
@@ -112,7 +125,7 @@ header nav {
 
 /* Our Culture */
 #our-culture .content-wrapper {
-  margin-top: 100px; }
+  margin-top: 75px; }
 #our-culture .culture-content {
   display: flex;
   flex-direction: column;
@@ -120,9 +133,27 @@ header nav {
   align-items: center;
   margin: 25px 0px; }
   #our-culture .culture-content article {
-    margin-bottom: 35px; }
+    margin-bottom: 15px; }
+#our-culture .culture-desc {
+  padding-bottom: 15px; }
 #our-culture .culture-button {
+  background: #0688FA;
+  border-radius: 5px;
+  border: 1px solid #0688FA;
+  padding: 15px 0px;
+  text-align: center;
   width: 100%; }
+  #our-culture .culture-button a:link,
+  #our-culture .culture-button a:visited {
+    color: white;
+    font-weight: bold; }
+  #our-culture .culture-button a:hover {
+    color: #0688FA !important;
+    transition: 2s color; }
+  #our-culture .culture-button:hover {
+    background: white;
+    border: 1px solid #0688FA;
+    transition: 2s background; }
 
 /* Our Progress */
 #company-history {
@@ -130,15 +161,16 @@ header nav {
   #company-history .timeline-background {
     position: relative;
     width: 100%;
-    height: 480px;
-    background: grey;
+    height: 500px;
+    background: #EFF8FF;
     z-index: -100; }
   #company-history .timeline {
-    margin: 50px 0px;
     display: flex;
+    margin: 50px 0px;
     justify-content: space-between;
     align-content: center; }
     #company-history .timeline .dates {
+      color: #329DFA;
       display: flex;
       flex-direction: column;
       justify-content: space-around; }
@@ -147,88 +179,199 @@ header nav {
       flex-direction: column;
       justify-content: space-between; }
     #company-history .timeline .images::after {
-      background: black;
+      background: #329DFA;
       content: " ";
-      height: 480px;
-      margin-left: 20px;
-      width: 5px;
+      height: 500px;
+      margin-left: 23px;
+      width: 3px;
       position: absolute;
       z-index: -20; }
     #company-history .timeline .desc {
       display: flex;
       flex-direction: column;
+      font-weight: 600;
+      line-height: 1.5rem;
       justify-content: space-around;
-      width: 54%; }
+      width: 57%; }
     #company-history .timeline .event {
       margin-bottom: 5px; }
 
 /* Our Offices */
-#offices .office-locations {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  text-align: center;
-  width: 100%; }
-  #offices .office-locations article {
-    background: red;
+#offices {
+  position: relative; }
+  #offices::before {
+    background: url(../img/offices-bg-desktop.png);
+    background-size: cover;
+    content: ' ';
+    position: absolute;
     width: 100%;
-    height: 220px;
-    margin: 20px 0px; }
-
-/* Our Investors */
-#investors .investors-content {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center; }
-  #investors .investors-content article {
-    background: red;
+    height: 1000px;
+    top: 40px;
+    z-index: -100; }
+  #offices .office-locations {
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 45px;
-    width: 100%;
-    height: 145px; }
-    #investors .investors-content article img {
-      margin: 0 auto; }
+    text-align: center;
+    width: 100%; }
+    #offices .office-locations article {
+      background: white;
+      border-radius: 5px;
+      box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.08);
+      height: 200px;
+      line-height: .5rem;
+      margin: 20px 0px;
+      padding-top: 20px;
+      width: 100%; }
+
+/* Our Investors */
+#investors {
+  padding-bottom: 75px; }
+  #investors .investors-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center; }
+    #investors .investors-content article {
+      background: white;
+      border-radius: 5px;
+      box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.08);
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 45px;
+      width: 100%;
+      height: 145px; }
+      #investors .investors-content article img {
+        margin: 0 auto; }
 
 /* Demo */
 #demo {
+  background: #329DFA;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   margin: 50px 0px;
   text-align: center; }
+  #demo h1 {
+    color: white; }
+  #demo::before {
+    content: ' ';
+    background: url("../img/demo-bg.png");
+    background-size: cover;
+    width: 100%;
+    height: 120px;
+    margin-top: -100px;
+    z-index: -100; }
+  #demo .demo-buttons {
+    padding: 50px 0px; }
+  #demo article {
+    margin-bottom: 20px; }
+  #demo .white-button {
+    background: white;
+    border: 1px solid white;
+    border-radius: 5px;
+    font-weight: 700;
+    padding: 10px 0px; }
+    #demo .white-button a:link,
+    #demo .white-button a:visited {
+      color: black; }
+    #demo .white-button:hover {
+      background: none;
+      box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.3);
+      transition: 2s background; }
+    #demo .white-button a:hover {
+      color: white;
+      transition: 2s color; }
+  #demo .white-outline-button {
+    background: none;
+    border: 1px solid white;
+    border-radius: 5px;
+    padding: 10px 0px; }
+    #demo .white-outline-button a:link,
+    #demo .white-outline-button a:visited {
+      color: white;
+      font-weight: 700; }
+    #demo .white-outline-button:hover {
+      background: white;
+      box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.3);
+      transition: 2s background; }
+    #demo .white-outline-button a:hover {
+      color: #329DFA !important;
+      transition: 1s color; }
 
 /* Footer */
 footer .footer-content {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  flex-wrap: wrap; }
+  flex-wrap: wrap;
+  width: 97%;
+  font-size: .80rem;
+  line-height: 1.20rem;
+  padding-bottom: 30px; }
   footer .footer-content article.footer-logo {
     width: 100%; }
+    footer .footer-content article.footer-logo .logo {
+      margin-left: 10px; }
+  footer .footer-content h3 {
+    font-size: 1rem; }
   footer .footer-content article {
-    width: 48%; }
+    width: 47%; }
+  footer .footer-content a:link,
+  footer .footer-content a:visited {
+    color: black; }
+  footer .footer-content a:hover {
+    color: #329DFA;
+    transition: 1s color; }
   footer .footer-content .divider {
     display: none; }
 footer .footer-social-media {
-  margin: 20px 0px;
+  margin: 10px 0px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
   padding-top: 30px;
   text-align: center; }
+  footer .footer-social-media::before {
+    position: absolute;
+    content: ' ';
+    background: #F4F4F4;
+    width: 100%;
+    height: 350px;
+    margin-top: 60px;
+    padding: 0;
+    z-index: -100; }
   footer .footer-social-media i {
-    background: black;
-    border-radius: 15px;
-    width: 20px;
-    height: 20px;
+    border-radius: 25px;
+    color: white;
+    margin: 0px 10px;
+    line-height: inherit;
+    width: 25px;
+    height: 25px;
     padding: 5px; }
+  footer .footer-social-media i:hover {
+    background: black;
+    transition: 1s background; }
+  footer .footer-social-media .fa-facebook-f {
+    background: #35589D; }
+  footer .footer-social-media .fa-twitter {
+    background: #5DA8DC; }
+  footer .footer-social-media .fa-linkedin-in {
+    background: #337BB1; }
+  footer .footer-social-media a {
+    font-weight: 700; }
+  footer .footer-social-media a:link,
+  footer .footer-social-media a:visited {
+    color: black; }
+  footer .footer-social-media a:hover {
+    color: #329DFA;
+    transition: 1s color; }
 footer .copyright {
+  font-size: .90rem;
   padding-bottom: 30px;
   text-align: center; }
 footer .footer-bg-element {
@@ -271,9 +414,11 @@ footer .footer-bg-element {
       #our-culture .culture-content article {
         width: 28%; }
     #our-culture .culture-button {
+      margin: 0 auto;
       margin-top: 35px;
+      margin-bottom: 100px;
       text-align: center;
-      width: 100%; }
+      width: 170px; }
       #our-culture .culture-button a {
         padding: 15px 35px; }
 
@@ -309,17 +454,24 @@ footer .footer-bg-element {
 
   /* Demo */
   #demo {
-    padding: 130px 0px; }
+    border-radius: 5px;
+    justify-content: space-around;
+    align-items: center;
+    margin: 0px 25px;
+    height: 195px;
+    padding-bottom: 30px; }
+    #demo::before {
+      display: none; }
     #demo .demo-buttons {
       display: flex;
       flex-direction: row;
       justify-content: space-between;
-      align-items: center; }
+      padding: 0; }
     #demo .white-button {
-      padding: 20px 70px;
-      margin: 0px 20px; }
+      padding: 10px 25px;
+      margin: 0px 10px; }
     #demo .white-outline-button {
-      padding: 20px 70px;
+      padding: 10px 25px;
       margin: 0px 20px; }
 
   /* Footer */
@@ -500,10 +652,6 @@ footer .footer-bg-element {
     /* Black prints faster */
     box-shadow: none !important;
     text-shadow: none !important; }
-
-  a,
-  a:visited {
-    text-decoration: underline; }
 
   a[href]:after {
     content: " (" attr(href) ")"; }
